--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
    <title>Document</title>
 </head>
 <body>
-   <h1>Welcome</h1>
+   <nav>
+      <head>
+         <h1>Welcome to git_Training</h1>
+      </head>
+   </nav>
 </body>
 </html>
